<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.root.medassist.ChatActivity">
    
    <item
        android:id="@+id/send_image"
        android:title="@string/send_image"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_picture" />
    
    <item
        android:id="@+id/send_file"
        android:title="@string/send_file"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_attachment" />
    
    <item 
        android:id="@+id/send_audio"
        android:title="@string/send_audio"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_mic" />
    
	<item 
        android:id="@+id/send_video"
        android:title="@string/send_video"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_video" />
	
	<item 
	    android:id="@+id/send_drawing"
	    android:title="@string/send_drawing"
	    app:showAsAction="ifRoom"
	    android:icon="@drawable/ic_action_edit"/>

</menu>