<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueb"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <Button
            android:id="@+id/browseDocs"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dip"
            android:background="@color/white"
            android:text="@string/browse"

            android:textAllCaps="false"
            android:textColor="@color/blueb"
            android:textSize="17dp" />

        <Button
            android:id="@+id/startAppointment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:text="@string/startAppointment"
            android:textAllCaps="false"
            android:textColor="@color/blueb"

            android:textSize="17dp" />

        <Button
            android:id="@+id/checkAppointments"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:text="@string/checkAppointments"
            android:textAllCaps="false"

            android:textColor="@color/blueb"
            android:textSize="17dp" />
        <Button
            android:id="@+id/checkPrescriptions"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:text="@string/checkPres"
            android:textAllCaps="false"
            android:textColor="@color/blueb"

            android:textSize="17dp"
            android:textAlignment="center"/>


        <Button
            android:id="@+id/btnLogout"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:background="@color/blue1"
            android:layout_width="96dp"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>



</RelativeLayout>